Thu Mar  8 10:50:14 EST 2001  Ben Collins <bcollins@debian.org>

  * gpg-parse.c (gpgVerify): Make sure we add NULL to the end of execl call
  * debsig-verify.c (main): Extra check to be sure policy files end in .pol

Tue Dec 12 17:39:55 EST 2000  Ben Collins <bcollins@debian.org>

  * Add a -d (debug) command line option.
  * debsig-verify.1: Document it
  * debsig.h: Add a DS_LEV define for it
  * debsig-verify.c: Some better formatting, and use the DEBUG level for
    some.
  * .c: use the DEBUG level for lots of the function info

Mon Dec 11 14:35:49 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig-verify.c: main(): Better formatting for the
    Selection/Verification verbose output.
  * gpg-parse.c: getKeyID()/getSigKeyID(): Extra verbose output, plus
    formatting.

Mon Dec 11 11:18:56 EST 2000  Ben Collins <bcollins@debian.org>

  * xml-parse.c: increment depthPtr at start of function to get rid of the
    goto
  * debsig-verify.c: checkIsDeb(): new function, functionality moved from
    main().

Mon Dec 11 10:47:49 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig-verify.c: outputUsage(): new function
  * debsig-verify.c: main(): Use it. Also, handle argv[0] better
    (prog_name).
  * gpg-parse.c: gpgVerify(): do not pass --always-trust to gpg.

Fri Dec  8 09:22:05 EST 2000  Ben Collins <bcollins@debian.org>

  * debsig.h:ds_fail_printf: new macro to print DS_LEV_ERR message and
    exit(1). Used throughout now.
  * xml-parse.c: Convert PARSE_ERROR macro to parse_error using proper
    stdarg format.

Thu Dec  7 21:28:40 EST 2000  Ben Collins <bcollins@debian.org>

  * xml-parse.c:clear_policy(): Used to free the memory used by the policy
    struct. Call it after a parse error, and before start of parse.
  * debsig-verify.c:main(): call clear_policy() if we fail, even though
    parsing succeeded.

Thu Dec  7 16:18:56 EST 2000  Ben Collins <bcollins@debian.org>

  * docs/debsig-verify.1.in: Move to here, and generate at build so we get